fix spacing

--- a/assets/sass/_theme/blocks/key_figures.sass
+++ b/assets/sass/_theme/blocks/key_figures.sass
@@ -28,7 +28,7 @@
                 margin-inline-end: 0.1em
             img
                 display: block
-                margin-bottom: $spacing0
+                margin-bottom: $spacing-2
             @include media-breakpoint-up(desktop)
                 font-size: $block-key_figures-font-size-desktop
                 strong
